Don't blindly overwrite the |hovered_tab| without painting the current one first.

There are issues here that manifested differently. They where all caused by
the same core issue. Since the tabs overlap visually, two tabs can report as
being hovered so make sure the |hovered_tab| variable isn't blindly overwritten
without first making sure it's painted.

Bug: 853240
Bug: 854371
Change-Id: I62643659c6416cb23637613d0c3da83c6f4605f2
Reviewed-on: https://chromium-review.googlesource.com/1108338
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568950}
Former-commit-id: ecf6e73fb56fa1ab8b058eeab82ba68fae1d5d8e